--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -2,7 +2,7 @@
 	"Back": "Voltar",
 	"History": "Histórico",
 	"Open project": "Abrir projeto",
-	"Table files": "Arquivos de tabelas",
+	"Table Files": "Arquivos de Tabelas",
 	"Open table": "Abrir tabela",
 	"Dark": "Escuro",
 	"Light": "Claro",
@@ -10,13 +10,14 @@
 	"Cancel": "Cancelar",
 	"Finish": "Finalizar",
 	"Result File": "Arquivo Final",
+	"Untitled Project": "Projeto Sem Nome",
 	"Blend other spreadsheets": "Mesclar outras planilhas",
 	"Open result file": "Abrir arquivo final",
 	"Merge Completed": "Mesclagem Completa",
+	"No Projects Found": "Nenhum Projeto Encontrado",
 	"Congratulations you merged all selected spreadsheets. You can find the result in the path below:": "Parabéns, você mesclou todas as planilhas selecionadas. Você pode encontrar o resultado no caminho abaixo:",
-	"No result file generated yet!": "Nenhum arquivo de resultado gerado ainda!",
+	"No result file generated yet!": "Nenhum arquivo final gerado ainda!",
 	"Select a new spreadsheet to start": "Selecione uma nova planilha para começar",
-	"No Projects Found": "Nenhum projeto encontrado",
 	"Apparently you haven't started any projects! Start a new project to see it listed on this page.": "Aparentemente você não iniciou nenhum projeto! Inicie um novo projeto para vê-lo listado nesta página.",
 	"History page is limited to the last {number} projects added or edited!": "A página de histórico é limitada aos últimos {number} projetos adicionados ou editados!"
 }
