--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -13,6 +13,8 @@
 	"Untitled Project": "Projeto Sem Nome",
 	"Blend other spreadsheets": "Mesclar outras planilhas",
 	"Open result file": "Abrir arquivo final",
+	"Add another spreadsheet": "Adicionar outra planilha",
+	"All rights reserved.": "Todos os direitos reservados.",
 	"Merge Completed": "Mesclagem Completa",
 	"No Projects Found": "Nenhum Projeto Encontrado",
 	"Congratulations you merged all selected spreadsheets. You can find the result in the path below:": "Parabéns, você mesclou todas as planilhas selecionadas. Você pode encontrar o resultado no caminho abaixo:",
