--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -18,6 +18,7 @@
 	"Merge Completed": "Mesclagem Completa",
 	"No Projects Found": "Nenhum Projeto Encontrado",
 	"Congratulations you merged all selected spreadsheets. You can find the result in the path below:": "Parabéns, você mesclou todas as planilhas selecionadas. Você pode encontrar o resultado no caminho abaixo:",
+	"Congratulations you merged all selected spreadsheets. You may merge other spreadsheets using the button below:": "Parabéns, você mesclou todas as planilhas selecionadas. Você mesclar outras tabelas usando o botão abaixo:",
 	"No result file generated yet!": "Nenhum arquivo final gerado ainda!",
 	"Select a new spreadsheet to start": "Selecione uma nova planilha para começar",
 	"Apparently you haven't started any projects! Start a new project to see it listed on this page.": "Aparentemente você não iniciou nenhum projeto! Inicie um novo projeto para vê-lo listado nesta página.",
